# super-octo-spoon

./: CMakeLists.txt  README.md
exercise files/: template-class.cpp  template-function.cpp  template-variable.cpp
src/: CMakeLists.txt  auto.cpp  template-function.cpp  template-variable.cpp
src/lib/: CMakeLists.txt  stack.hpp
